# supply-chain-kafka

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.common.toml
customer_portal/: pyproject.toml
customer_portal/tests/: test_customer_portal.py
fraud_detection/: Dockerfile  Makefile  pyproject.toml
fraud_detection/fraud_detection/: consumer.py  main.py  producer.py  schemas.py  server.py
fraud_detection/tests/: test_fraud_detection.py
infra/docker/: Dockerfile.base
infra/grafana/: install-grafana.sh
infra/k8s/: fraud-detection-service.yaml  kafka-client.yaml  notification-service.yaml  order-service.yaml  tracking-service.yaml  warehouse-service.yaml
infra/kafka/: install-kafka.sh  kafka-defaults-20.0.6.yaml  test-kafka.sh  values.yaml
infra/minikube/: start-minikube.sh
libs/logging_utils/: pyproject.toml
libs/logging_utils/logging_utils/: __init__.py  config.py
logging_utils/: config.py  formatters.py
notification_service/: Dockerfile  Makefile  pyproject.toml
notification_service/notification_service/: consumer.py  handler.py  main.py  schemas.py  server.py
notification_service/tests/: test_notification_service.py
order_service/: .env  Dockerfile  Makefile  pyproject.toml
order_service/order_service/: logger.py  main.py  producer.py  schemas.py  server.py
order_service/tests/: conftest.py  test_producer.py
tracking_service/: Dockerfile  Makefile  README.rst  pyproject.toml
tracking_service/tests/: test_tracking_service.py
tracking_service/tracking_service/: __init__.py  consumer.py  logger.py  main.py  producer.py  schemas.py  server.py
warehouse_service/: Dockerfile  pyproject.toml
warehouse_service/tests/: test_warehouse_service.py
warehouse_service/warehouse_service/: consumer.py  inventory.py  logger.py  main.py  schemas.py  server.py
