[tool.poetry]
name = "logging_utils"
version = "0.1.0"
description = "Common logging utilities for supply chain microservices"
authors = ["Andres Cox <andreshcox@gmail.com>"]
packages = [{include = "logging_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"